--- a/app/res/values-fr/strings.xml
+++ b/app/res/values-fr/strings.xml
@@ -268,10 +268,11 @@ License.
 
     <string name="connect_hq_invitation_heading">Vous êtes invité au domaine du projet CommCareHQ en tant que %s</string>
     <string name="connect_hq_invitation_accept">Accepter</string>
-    <string name="connect_hq_invitation_denied">Refusé</string>
+    <string name="connect_hq_invitation_denied">Déclin</string>
     <string name="connect_hq_invitation_go_to_recovery">Aller à la récupération</string>
     <string name="connect_hq_invitation_connectId_not_configure">Vous n\'avez pas configuré votre ConnectID. Pour accepter cette invitation, veuillez dabord configurer votre ConnectID. Une fois configuré, vous pourrez accepter invitation.</string>
     <string name="connect_hq_invitation_wrong_user">Oups ! Il semble que l’invitation ait été envoyée à la mauvaise personne.</string>
     <string name="connect_appbar_title_app_lock">Verrouillage d\'application</string>
     <string name="connect_appbar_title_password_verification">Vérification du mot de passe</string>
+    <string name="connect_hq_invitation_accept_error">Une erreur s\'est produite lors de l\'acceptation de l\'invitation, veuillez contacter l\'assistance.</string>
 </resources>
