--- a/app/res/values-fr/strings.xml
+++ b/app/res/values-fr/strings.xml
@@ -266,7 +266,7 @@ License.
     <string name="connect_learn">Apprendre</string>
     <string name="connect_delivery">Livraison</string>
 
-    <string name="connect_hq_invitation_heading">Vous êtes invité au domaine du projet CommCareHQ en tant que %s</string>
+    <string name="connect_hq_invitation_heading">Vous êtes invité au domaine %s du projet CommCareHQ en tant que %s</string>
     <string name="connect_hq_invitation_accept">Accepter</string>
     <string name="connect_hq_invitation_denied">Déclin</string>
     <string name="connect_hq_invitation_go_to_recovery">Aller à la récupération</string>
