--- a/app/assets/locales/android_translatable_strings.txt
+++ b/app/assets/locales/android_translatable_strings.txt
@@ -996,3 +996,5 @@ android.package.name.org.commcare.dalvik.abha=CommCare ABHA
 microimage.camera.start.failed=Camera failed to start
 microimage.face.detection.mode.failed=Face detection mode failed
 microimage.cropping.failed=Image cropping failed, make sure the target is inside the capture area
+microimage.decoding.no.image=Image processing failed. Please try again
+microimage.scalingdown.compression.error=Image compression failed. Please try again
