--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -820,16 +820,7 @@
     <string name="login_input_auto">AUTO</string>
     <string name="connect_button_logged_in">Go to Connect menu</string>
     <string name="connect_consent_title">Consent</string>
-    <string name="ConnectVerifyConfirmSecondaryOTPURL">https://connectid.dimagi.com/users/confirm_secondary_otp</string>
-    <string name="ConnectConfirmOTPURL">https://connectid.dimagi.com/users/confirm_otp</string>
-    <string name="ConnectRegisterURL">https://connectid.dimagi.com/users/register</string>
-    <string name="ConnectOpportunitiesURL">https://%s/api/opportunity/</string>
-    <string name="ConnectStartLearningURL">https://%s/users/start_learn_app/</string>
-    <string name="ConnectLearnProgressURL">https://%s/api/opportunity/%d/learn_progress</string>
-    <string name="ConnectClaimJobURL">https://%s/api/opportunity/%d/claim</string>
-    <string name="ConnectDeliveriesURL">https://%s/api/opportunity/%d/delivery_progress</string>
-    <string name="ConnectPaymentConfirmationURL">https://%s/api/payment/%s/confirm</string>
-    <string name="ConnectInitiateUserAccountDeactivationURL">https://connectid.dimagi.com/users/recover/initiate_deactivation</string>
-    <string name="ConnectConfirmUserAccountDeactivationURL">https://connectid.dimagi.com/users/recover/confirm_deactivation</string>
     <string name="connect_db_corrupt" cc:translatable="true">A problem occurred with the database, please recover your account.</string>
+    <string name="add_secondary_phone_number">Add Secondary Phone Number</string>
+    <string name="add_secondary_phone_number_to_reset_your_recovery_code">Add secondary phone number to reset your Recovery Code.</string>
 </resources>
