Create notification when service starts

--- a/app/assets/locales/android_translatable_strings.txt
+++ b/app/assets/locales/android_translatable_strings.txt
@@ -464,6 +464,8 @@ recording.prompt.without.file.chooser=Record sound below
 recording.custom=Recorded Sound
 recording.paused.due.another.app.recording.title=CommCare Audio Recording
 recording.paused.due.another.app.recording.message=Recording paused as another app started recording. Click here to resume the recording!
+recording.notification.title=Audio recording
+recording.notification.in.progress=Recording in progress...
 
 callout.failure.dialer=Device is not currently configured to make telephone calls
 callout.failure.sms=SMS app not found
