--- a/app/res/values-pt/strings.xml
+++ b/app/res/values-pt/strings.xml
@@ -220,7 +220,7 @@
     <string name="form_scan_finished">Completa a varredura de formulários</string>
     <string name="access_error">Erro enquanto acessa %s: ""</string>
     <string name="manifest_server_error">Manifestar uma resposta quando não ha uma versão do Open Rosa -- servidor ruin?</string>
-    <string name="root_element_error">Elemento raiz não é &lt;manifest\> -- foi %s</string>
+    <string name="root_element_error">Elemento raiz não é &lt;manifest\&gt; -- foi %s</string>
     <string name="root_namespace_error">Root element Namespace incorreto: %s</string>
     <string name="manifest_tag_error">Manifesto %s entrada está faltando uma ou mais tags: arquivo, hash, ou downloadURL</string>
     <string name="form_download_progress">%1$s. Acessando arquivos de mídia: %2$s de %3$s</string>
