--- a/app/res/values-ti/strings.xml
+++ b/app/res/values-ti/strings.xml
@@ -208,7 +208,7 @@
     <string name="form_scan_finished">ኣለሻ ቅጥዕታት ተዛዚሙ</string>
     <string name="access_error">ጌጋ ኣብ እዋን ምርካብ /ምድላይ</string>
     <string name="manifest_server_error"></string>
-    <string name="root_element_error">እዚ ዋና ፀገሙ ኣይኮነን &amp;lt;manifest\&gt; -- was %s</string>
+    <string name="root_element_error">እዚ ዋና ፀገሙ ኣይኮነን &lt;manifest\&gt; -- was %s</string>
     <string name="root_namespace_error"></string>
     <string name="manifest_tag_error"></string>
     <string name="form_download_progress">ፋይላት ሚድያ ምርካብ</string>
