--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -560,6 +560,8 @@
     <string name="connect_last_update">Updated: %s</string>
     <string name="connect_title">Connect</string>
     <string name="connect_no_jobs">You have not been invited to any active opportunities. Please come back later.</string>
+    <string name="connect_corrupt_jobs">Something went wrong while showing your active opportunities.</string>
+    <string name="connect_corrupt_job_text">Failed to load this opportunity</string>
 
     <string name="connect_job_intro_title">Opportunity</string>
 
