--- a/app/res/values-pt/strings.xml
+++ b/app/res/values-pt/strings.xml
@@ -437,7 +437,7 @@
     <string name="connect_verify_configure_fingerprint">Configurar impressão digital</string>
     <string name="connect_verify_use_pin_long">Utilizar o PIN para ligar</string>
     <string name="connect_verify_pin_configured">O seu PIN já foi configurado e será utilizado para desbloquear o ConnectID.</string>
-    <string name="connect_verify_configuration_failed">A configuração falhou, tente novamente</string>
+    <string name="connect_verify_configuration_failed">A configuração falhou, tente novamente. %s</string>
     <string name="connect_verify_configure_pin">Configurar PIN</string>
     <string name="connect_verify_agree">Concordo &amp; Continuar</string>
     <string name="connect_verify_phone_title">Código de verificação</string>
