--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -515,7 +515,7 @@
     <string name="connect_verify_configure_fingerprint">Configure Fingerprint</string>
     <string name="connect_verify_use_pin_long">Use PIN to Connect</string>
     <string name="connect_verify_pin_configured">Your PIN has already been configured and will be used to unlock ConnectID.</string>
-    <string name="connect_verify_configuration_failed">Configuration failed, please try again</string>
+    <string name="connect_verify_configuration_failed">Configuration failed, please try again. %s</string>
 
     <string name="connect_verify_configure_pin">Configure PIN</string>
     <string name="connect_verify_agree">Agree &amp; Continue</string>
