--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -566,6 +566,7 @@
     <string name="connect_unlock_message">Please unlock to continue</string>
     <string name="connect_unlock_button_pin">Unlock with PIN</string>
     <string name="connect_unlock_button_password">Unlock with Password</string>
+    <string name="connect_unlock_unavailable">Por favor configure um mecanismo de desbloqueio de tela</string>
 
     <string name="connect_unlock_trouble_message">Trouble unlocking?</string>
     <string name="connect_unlock_fingerprint_title">Unlock via fingerprint</string>
@@ -603,6 +604,7 @@
     <string name="connect_verify_use_pin">Use PIN</string>
     <string name="connect_verify_use_pin_long">Use PIN to Connect</string>
     <string name="connect_verify_pin_configured">Your PIN has already been configured and will be used to unlock ConnectID.</string>
+    <string name="connect_verify_configuration_failed">A configuração falhou, tente novamente</string>
 
     <string name="connect_verify_configure_pin">Configure PIN</string>
     <string name="connect_verify_agree">Agree &amp; Continue</string>
@@ -833,4 +835,5 @@
     <string name="connect_db_corrupt" cc:translatable="true">A problem occurred with the database, please recover your account.</string>
     <string name="add_secondary_phone_number">Add Secondary Phone Number</string>
     <string name="add_secondary_phone_number_to_reset_your_recovery_code">Add secondary phone number to reset your Recovery Code.</string>
+    <string name="login_via_connect">Ready to login!\n</string>
 </resources>
