--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -465,11 +465,12 @@
     <string name="dependency_missing_dialog_playstore_not_found" cc:translatable="true">No Play Store found on your device</string>
     <string name="fcm_notification">FCM Notification</string>
     <string name="fcm_default_notification_channel">notification-channel-push-notifications</string>
-    <string name="app_with_id_not_found">Required CommCare App is not installed on device</string>
-    <string name="audio_recording_notification">Audio Recording Notification</string>
+    <string name="app_select_message" cc:translatable="true">Select an app:</string>
     <!-- ConnectID strings -->
     <string name="choice_or">_____________    OR    _____________</string>
     <string name="connect_registration_title">ConnectID Signup</string>
+    <string name="app_with_id_not_found">Required CommCare App is not installed on device</string>
+    <string name="audio_recording_notification">Audio Recording Notification</string>
     <string name="connect_signup">Signup</string>
     <string name="connect_recover">Recover</string>
     <string name="connect_registration_have_account">Already have\nan Account?</string>
