--- a/app/res/values-pt/strings.xml
+++ b/app/res/values-pt/strings.xml
@@ -39,7 +39,7 @@
     <string name="migration_possible_failure">A CommCare não conseguiu migrar todos os seus dados durante uma atualização do aplicativo. Reinicie o CommCare para tentar corrigir isso. Se esta mensagem persistir, pode ser necessário \'Limpar dados\' do CommCare no menu Configurações do seu dispositivo.</string>
     <string name="migration_failure_title">Erro de migração</string>
     <string name="multiple_apps_limit_message">Você atingiu seu limite de aplicativos instalados; você só pode ter até %s aplicativos instalados por vez.\n\nSe quiser instalar um novo aplicativo, você pode primeiro desinstalar um aplicativo existente, o que pode ser feito no gerenciador de aplicativos.</string>
-    <string name="back_to_manager">Voltar ao Gerenciador de aplicativos""</string>
+    <string name="back_to_manager">Voltar ao Gerenciador de aplicativos</string>
     <string name="go_to_manager">Vá para o Gerenciador de aplicativos</string>
     <string name="claim_privilege_button_text">PRIVILÉGIOS DE REIVINDICAÇÃO</string>
     <string name="privilege_enabled_text">Os seguintes privilégios estão ativados no seu dispositivo:\n\n %s</string>
@@ -188,7 +188,7 @@
     <string name="saved_data">Incompleto (%s)</string>
     <string name="save_all_answers">Salvar Formulário</string>
     <string name="save_data_message">Por favor, salvar Formulário para manter as respostas.</string>
-    <string name="save_enter_data_description">Você está no fim de \%s\"."</string>
+    <string name="save_enter_data_description">Você está no fim de "\%s\".</string>
     <string name="saving_form">Salvando Formulário</string>
     <string name="send">enviar</string>
     <string name="sending_items">Enviando %1$s de %2$s Formulário(s)</string>
