--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -50,7 +50,7 @@
     <string name="migration_possible_failure">CommCare was unable to migrate all of your data during an application upgrade. Please restart CommCare to try to fix this. If this message persists, you may need to \'Clear data\' for CommCare in your device\'s Settings menu.</string>
     <string name="migration_failure_title">Migration Error</string>
     <string name="multiple_apps_limit_message">You have reached your limit of installed apps; you may only have up to %s apps installed at once.\n\nIf you would like to install a new app, you may uninstall an existing app first, which can be done from the app manager.</string>
-    <string name="back_to_manager">"Back to App Manager"</string>
+    <string name="back_to_manager">Back to App Manager</string>
     <string name="go_to_manager">Go to App Manager</string>
     <string name="claim_privilege_button_text">CLAIM PRIVILEGES</string>
     <string name="privilege_enabled_text">The following privileges are enabled on your device:\n\n %s</string>
@@ -548,6 +548,8 @@
     <string name="connect_messaging_message_notification_message">You received a new message from %s, press here to view.</string>
     <string name="connect_messaging_channel_notification_title">🔔 New Channel 🔔</string>
     <string name="connect_messaging_channel_notification_message">A new messaging channel is available from %s, press here to view</string>
+    <string name="connect_send_message_hint">Type message</string>
+    <string name="connect_send_message_btn_desc">Press here to send message</string>
 
     <string name="connect_last_update">Updated: %s</string>
     <string name="connect_title">Connect</string>
