--- a/app/assets/locales/android_translatable_strings.txt
+++ b/app/assets/locales/android_translatable_strings.txt
@@ -797,9 +797,9 @@ wifi.direct.no.group=This device is not connected to any Wi-Fi Direct group.
 wifi.direct.receive.successful=Received ${0} files successfully!
 wifi.direct.send.successful=File Send Successful!
 wifi.direct.send.unsuccessful=Error sending files: ${0}
-wifi.direct.error.no.forms=Phone has received no forms via Wi-fi direct for Submitting; did you mean to Send forms?
+wifi.direct.error.no.forms=Phone has received no forms via Wi-Fi direct for Submitting; did you mean to Send forms?
 wifi.direct.discovery.start=Discovery Initiated
-wifi.direct.discovery.failed.generic=Discovery failed due to bad Wi-fi state; turn Wi-fi on and off, then retry
+wifi.direct.discovery.failed.generic=Discovery failed due to bad Wi-Fi state; turn Wi-Fi on and off, then retry
 wifi.direct.discovery.failed.specific=Discovery failed with reason code ${0}
 wifi.direct.connect.failed=Connecting failed, please retry
 wifi.direct.error.wiping.forms=Error wiping forms: ${0}
